--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 a:hover {
   color:#c0bab2;
 }
@@ -103,6 +101,10 @@ p {
   padding-left: 1%;
   text-decoration: none;
   border-radius: 0.25rem;
+}
+
+a.button-holder-small:hover {
+  color: #c0bab2;
 }
 
 .drive {
