changed website layout

--- a/styles.css
+++ b/styles.css
@@ -107,12 +107,12 @@ a.btn-hldr-small:hover {
   color: #c0bab2;
 }
 
-.drive {
+.java {
   float: right;
   width: 25%;
 }
 
-.ish {
+.wani {
   text-decoration: underline;
 }
 
@@ -162,8 +162,9 @@ a.btn-hldr-small:hover {
   font-weight: 900;
 }
 
-.romance {
+.python {
   float: left;
+  margin-top: 3.5rem;
   margin-right: 35px;
   width: 25%;
 }
